[tool.poetry]
name = "qti"
version = "0.1.0"
description = "Server to convert Markdown to QTI"
authors = ["Fred Yankowski <fcy@imsa.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
text2qti = "^0.5.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
